--- a/sass/utilities/_fonts.scss
+++ b/sass/utilities/_fonts.scss
@@ -1,6 +1,6 @@
-/*------------------------------------*\
-    $FONTS
-\*------------------------------------*/
+/**
+ * Fonts
+ */
 
 /*
 @font-face {
