--- a/sass/utilities/_icons.scss
+++ b/sass/utilities/_icons.scss
@@ -1,9 +1,8 @@
-/*------------------------------------*\
-    $ICONS
-\*------------------------------------*/
+/**
+ * Icons
+ */
 
 /*
-
 @font-face {
 	font-family: 'icons';
 	src:url('../fonts/icons.eot');
