--- a/sass/utilities/_mixins.scss
+++ b/sass/utilities/_mixins.scss
@@ -1,16 +1,12 @@
-/*------------------------------------*\
-    $MIXINS
-\*------------------------------------*/
+/**
+ * Mixins
+ */
 
-/*------------------------------------*\
-    $BREAK POINTS
-\*------------------------------------*/
-
-// Documentation: http://www.sitepoint.com/cross-media-query-extend-sass/
-
-/*------------------------------------*\
-    $BREAK POINTS
-\*------------------------------------*/
+ /**
+  * Breakpoints
+  *
+  * Based on: http://www.sitepoint.com/cross-media-query-extend-sass/
+  */
 
 @mixin breakpoint($breakpoint) {
       // Get the width from the keyword `$breakpoint`
@@ -39,9 +35,9 @@
   }
 }
 
-/*------------------------------------*\
-    $PLACEHOLDERS
-\*------------------------------------*/
+/**
+ * Placeholders
+ */
 
 
 @mixin placeholder($name) {
